samples/_failures_safe/1760884705_82ec9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55ea293d.c: In function ‘main’:
./samples/SAFE/__tmp_55ea293d.c:180:9: error: expected declaration or statement at end of input
  180 |         current_state = handle_event(current_state, event, &ctx);
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_55ea293d.c:180:9: error: expected declaration or statement at end of input
